--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -199,4 +199,13 @@
   <data name="Logo_SHME" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_SHME.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brushForceGauss" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brushForceGauss.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brushForceSphere" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brushForceSphere.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brushForceSqure" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brushForceSqure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
