--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -205,7 +205,10 @@
   <data name="brushForceSphere" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brushForceSphere.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="brushForceSqure" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\brushForceSqure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="brushForceSquare" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brushForceSquare.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
