Added form "About"

--- a/FormSHME.resx
+++ b/FormSHME.resx
@@ -179,7 +179,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACq
-        CQAAAk1TRnQBSQFMAgEBAwEAAYgBAAGIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAAZABAAGQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -238,7 +238,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABo
-        BwAAAk1TRnQBSQFMAgEBAgEAAfABAQHwAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        BwAAAk1TRnQBSQFMAgEBAgEAAfgBAQH4AQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -322,6 +322,23 @@
   <metadata name="pnlCorner.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="pnlCorner.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAK0SURBVDhPbZLrS5NRHMefl/4JEl0ws2lUY+XcLGUJxlBLsc2CrXlZ5nSTapq3wspriLdKqdQi
+        NEQDoxcS1YtepVHqrs90anlhzZyPc07nZWrx7ewpvJAvvufAj9/nfL+/cw4F4D/J7hohLR5EXL6FyAyx
+        to+Ud/b4+flROwppFTSirtPgZxjBSzOAm2IAT2kEP9OMcA2NSLWetO0CKyuHIFSZcEJpwL3mSdgcq9jY
+        +I2pmVVUtdkQmmmBIHsQQo2ZPWATTinR4VSWiXWUFA7B6/2FxaV1TDMrWF5eg8fjRWbNGMK1VgiJBNl6
+        bMJJd6wsyCfOoSozipsmkXhrBGFZFvQaXVhYWEFthx2C3BFW4TdHweFwKOpGjQ6n1cSVgL7ZwjQWcDNo
+        HCUKSaPRT7vgci1BWT0OnnYUvJxv7B5XOADqQl7vX1cCctNNCFQYEJhiQlCqGR0fpjE358HbnlmczP0O
+        4e0JokkIyC7Ko0HF5/awrhyFHvsu6RCgMOLwFQu0j8bhdHpgHHYhomgCkaU/IKqwQ1Q5BVG5HWIyKpVe
+        /hUc+QD2SPtxQKbHIeIYkjGIF90/wTCLqO+axhkCRVc7IK5nIH7AIIZIUWsBFZPagCPyPuxNGkDAZQNx
+        JfOqrThfNIqqdjsSymw4W+tAbKMT8c3zSGhxI/nlPAqayMy+2w5N/YT9JPJBEjn4qgXHsodZZ4fDjafd
+        xKnBicRnblxsX4K8cwXpbTNbTyXJeowQeT8Ck00IJpGPXxtBXaedjV33ZhbnnrggbfNA8XoNhR+9KG3V
+        bcE+Rag+I+gfzCWwpGwcre8ZyB46WDiJwJp368jpYkj7Ln87Nu8LiU2ejMD8gjFElNjYi5K2zEH1yg31
+        8zEW9ImFfct2+fv7U7LSPkTnGxBVZIXk/hDUjSb46tv7KIqi/gCEsjxzJctJEQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
