--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -214,4 +214,10 @@
   <data name="add" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="historyBackHi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\historyBackHi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="historyForwardHi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\historyForwardHi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
