--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -142,8 +142,8 @@
   <data name="toolProbe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\toolProbe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="toolLevel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\toolLevel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="toolLevelFlaten" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\toolLevelFlaten.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="toolLevelSmooth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\toolLevelSmooth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -219,5 +219,17 @@
   </data>
   <data name="historyForwardHi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\historyForwardHi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="toolLevelFlatenDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\toolLevelFlatenDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="toolLevelFlatenUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\toolLevelFlatenUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="toolLevelStretch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\toolLevelStretch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="eye" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
