Started MultiTouch rework (not optimazed)

--- a/FormSHME.resx
+++ b/FormSHME.resx
@@ -132,18 +132,18 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="tsmCreateScanline.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAABcSURBVDhPpcOBEAAhFEXRZ/ARQgghhBBCCCGEEEIIIYQQ
-        Qrm7Du/MHP2wRgROpZRwKueMU6UUnKq14lRrDad67zg1xsCpOSdOrbVwau+NU+ccnLr34tR7D6ewwAe1
-        uGdPB64L3QAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAFxJREFUOE+lw4EQACEURdFn8BFCCCGEEEIIIYQQQgghhBBCubsO78wc/bBGBE6l
+        lHAq54xTpRScqrXiVGsNp3rvODXGwKk5J06ttXBq741T5xycuvfi1HsPp7DAB7W4Z08HrgvdAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="tsmCreateSerpantine.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAACFSURBVDhPpcxBEYQwAEPROKgEJCABCZWAhEqohEpAAhIq
-        oRKQEvaYQyYc9s+868cv/qWUwmTbtgjHcTBxU4V935m4qcJ5nkzcVKHWysRNFXrvTNxUobXGxE0Vruti
-        4qYKYwwmbqow52Tipgr3fTNxU4XneZi4qcJai4mbKvAjN1Wfgxz5ArrMfE/6jY25AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAIVJREFUOE+lzEERhDAAQ9E4qAQkIAEJlYCESqiESkACEiqhEpAS9phDJhz2z7zr
+        xy/+pZTCZNu2CMdxMHFThX3fmbipwnmeTNxUodbKxE0Veu9M3FShtcbETRWu62LipgpjDCZuqjDnZOKm
+        Cvd9M3FThed5mLipwlqLiZsq8CM3VZ+DHPkCusx8T/qNjbkAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="dlgColor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -152,23 +152,20 @@
   <metadata name="cmsSaveFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>520, 17</value>
   </metadata>
-  <data name="btnSaveHMap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAACCSURBVDhPvZPBDYAgDEXZxjG8Oo4bsIMDeeHqCOzyTTWQ
-        H6mlxMTDI1D6X7kQAHziWtZtx7wcFyklk9InmSooxTcB33Fvzvl+BhefYQ7xXvhPwHCvKhihEWgTNUxB
-        jNGkK/BgCrSpTFfgwRRoU5muwEMjKJ8JcXIhvZKpAkEOowAIJzI23yfQ1fx1AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>430, 17</value>
-  </metadata>
   <data name="tsmi8BitPNG.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAABcSURBVDhPpcOBEAAhFEXRZ/ARQgghhBBCCCGEEEIIIYQQ
-        Qrm7Du/MHP2wRgROpZRwKueMU6UUnKq14lRrDad67zg1xsCpOSdOrbVwau+NU+ccnLr34tR7D6ewwAe1
-        uGdPB64L3QAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAFxJREFUOE+lw4EQACEURdFn8BFCCCGEEEIIIYQQQgghhBBCubsO78wc/bBGBE6l
+        lHAq54xTpRScqrXiVGsNp3rvODXGwKk5J06ttXBq741T5xycuvfi1HsPp7DAB7W4Z08HrgvdAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="btnSaveHMap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAIJJREFUOE+9k8ENgCAMRdnGMbw6jhuwgwN54eoI7PJNNZAfqaXExMMjUPpfuRAA
+        fOJa1m3HvBwXKSWT0ieZKijFNwHfcW/O+X4GF59hDvFe+E/AcK8qGKERaBM1TEGM0aQr8GAKtKlMV+DB
+        FGhTma7AQyMonwlxciG9kqkCQQ6jAAgnMjbfJ9DV/HUAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="ilToolForce.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -179,7 +176,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACq
-        CQAAAk1TRnQBSQFMAgEBAwEAAZABAQGQAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAwEAAZgBAQGYAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -225,9 +222,9 @@
   </data>
   <data name="chbBrush3Shape.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAABESURBVDhP7YtBCgAgDMP2/09XGSiunTo8ewisITMAT6SygoquMqQLg2ImtPOgaMd/PCCPPihi
-        QrsOFxQPpGNRJZV3YA3oTZp0qG384gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAABGdBTUEAALGPC/xhBQAAAERJREFUOE/t
+        i0EKACAMw/b/T1cZKK6dOjx7CKwhMwBPpLKCiq4ypAuDYia086Box388II8+KGJCuw4XFA+kY1EllXdg
+        DehNmnSobfziAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="ilToolShape.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -237,53 +234,53 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABo
-        BwAAAk1TRnQBSQFMAgEBAgEAAfgBAgH4AQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQABQgFN
-        AT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAT/BAAE/wQAAfgBHwHgAQcEAAHw
-        AQ8B4AEHBAAB4AEHAeABBwQAAeABBwHgAQcEAAHgAQcB4AEHBAAB4AEHAeABBwQAAeABBwHgAQcEAAHg
-        AQcB4AEHBAAB8AEPAeABBwQAAfgBHwHgAQcEAAT/BAAE/wQABP8EAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABm
+        BwAAAk1TRnQBSQFMAgEBAgIAAQMBAAEDARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
+        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
+        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
+        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
+        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
+        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
+        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
+        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
+        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
+        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
+        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
+        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
+        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
+        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
+        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
+        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
+        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
+        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
+        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
+        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
+        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
+        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
+        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
+        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
+        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
+        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AP8A/wD/AAUAAUIBTQE+
+        BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAAE/wQABP8EAAH4AR8B4AEHBAAB8AEP
+        AeABBwQAAeABBwHgAQcEAAHgAQcB4AEHBAAB4AEHAeABBwQAAeABBwHgAQcEAAHgAQcB4AEHBAAB4AEH
+        AeABBwQAAfABDwHgAQcEAAH4AR8B4AEHBAAE/wQABP8EAAT/BAAL
 </value>
   </data>
   <data name="chbBrush2Shape.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAABESURBVDhP7YtBCgAgDMP2/09XGSiunTo8ewisITMAT6SygoquMqQLg2ImtPOgaMd/PCCPPihi
-        QrsOFxQPpGNRJZV3YA3oTZp0qG384gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAABGdBTUEAALGPC/xhBQAAAERJREFUOE/t
+        i0EKACAMw/b/T1cZKK6dOjx7CKwhMwBPpLKCiq4ypAuDYia086Box388II8+KGJCuw4XFA+kY1EllXdg
+        DehNmnSobfziAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="chbBrush1Shape.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAABESURBVDhP7YtBCgAgDMP2/09XGSiunTo8ewisITMAT6SygoquMqQLg2ImtPOgaMd/PCCPPihi
-        QrsOFxQPpGNRJZV3YA3oTZp0qG384gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAABGdBTUEAALGPC/xhBQAAAERJREFUOE/t
+        i0EKACAMw/b/T1cZKK6dOjx7CKwhMwBPpLKCiq4ypAuDYia086Box388II8+KGJCuw4XFA+kY1EllXdg
+        DehNmnSobfziAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="hScrollBar.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -294,11 +291,10 @@
   </metadata>
   <data name="btnToolAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAACRSURBVDhP3ZVBEsAgCAP9n/7/O7YwYhESD7anZmYPboCr
-        RVJrLb33V7TW9BYsPTLiiX0ESoEdYN7AcrNgsJkswKA45pNbHnxJs+mft8nN8BI2Z34pPGMAxpYRWG6O
-        WdjRJFTe2mMBftkTkoiMRQ074oHS88ODY4MitSf2EQ0qTphB5QkzqDxhBpUnzHz3BZRyAXmOOoxZIrqD
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAJFJREFUOE/dlUESwCAIA/2f/v87tjBiERIPtqdmZg9ugKtFUmstvfdXtNb0Fiw9
+        MuKJfQRKgR1g3sBys2CwmSzAoDjmk1sefEmz6Z+3yc3wEjZnfik8YwDGlhFYbo5Z2NEkVN7aYwF+2ROS
+        iIxFDTvigdLzw4NjgyK1J/YRDSpOmEHlCTOoPGEGlSfMfPcFlHIBeY46jFkiuoMAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="pnlCorner.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -306,27 +302,21 @@
   </metadata>
   <data name="pnlCorner.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAK0SURBVDhPbZLrS5NRHMefl/4JEl0ws2lUY+XcLGUJxlBLsc2CrXlZ5nSTapq3wspriLdKqdQi
-        NEQDoxcS1YtepVHqrs90anlhzZyPc07nZWrx7ewpvJAvvufAj9/nfL+/cw4F4D/J7hohLR5EXL6FyAyx
-        to+Ud/b4+flROwppFTSirtPgZxjBSzOAm2IAT2kEP9OMcA2NSLWetO0CKyuHIFSZcEJpwL3mSdgcq9jY
-        +I2pmVVUtdkQmmmBIHsQQo2ZPWATTinR4VSWiXWUFA7B6/2FxaV1TDMrWF5eg8fjRWbNGMK1VgiJBNl6
-        bMJJd6wsyCfOoSozipsmkXhrBGFZFvQaXVhYWEFthx2C3BFW4TdHweFwKOpGjQ6n1cSVgL7ZwjQWcDNo
-        HCUKSaPRT7vgci1BWT0OnnYUvJxv7B5XOADqQl7vX1cCctNNCFQYEJhiQlCqGR0fpjE358HbnlmczP0O
-        4e0JokkIyC7Ko0HF5/awrhyFHvsu6RCgMOLwFQu0j8bhdHpgHHYhomgCkaU/IKqwQ1Q5BVG5HWIyKpVe
-        /hUc+QD2SPtxQKbHIeIYkjGIF90/wTCLqO+axhkCRVc7IK5nIH7AIIZIUWsBFZPagCPyPuxNGkDAZQNx
-        JfOqrThfNIqqdjsSymw4W+tAbKMT8c3zSGhxI/nlPAqayMy+2w5N/YT9JPJBEjn4qgXHsodZZ4fDjafd
-        xKnBicRnblxsX4K8cwXpbTNbTyXJeowQeT8Ck00IJpGPXxtBXaedjV33ZhbnnrggbfNA8XoNhR+9KG3V
-        bcE+Rag+I+gfzCWwpGwcre8ZyB46WDiJwJp368jpYkj7Ln87Nu8LiU2ejMD8gjFElNjYi5K2zEH1yg31
-        8zEW9ImFfct2+fv7U7LSPkTnGxBVZIXk/hDUjSb46tv7KIqi/gCEsjxzJctJEQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAArRJREFUOE9t
+        kutLk1Ecx5+X/gkSXTCzaVRj5dwsZQnGUEuxzYKteVnmdJNqmrfCymuIt0qp1CI0RAOjFxLVi16lUequ
+        z3RqeWHNnI9zTudlavHt7Cm8kC++58CP3+d8v79zDgXgP8nuGiEtHkRcvoXIDLG2j5R39vj5+VE7CmkV
+        NKKu0+BnGMFLM4CbYgBPaQQ/04xwDY1ItZ607QIrK4cgVJlwQmnAveZJ2Byr2Nj4jamZVVS12RCaaYEg
+        exBCjZk9YBNOKdHhVJaJdZQUDsHr/YXFpXVMMytYXl6Dx+NFZs0YwrVWCIkE2Xpswkl3rCzIJ86hKjOK
+        myaReGsEYVkW9BpdWFhYQW2HHYLcEVbhN0fB4XAo6kaNDqfVxJWAvtnCNBZwM2gcJQpJo9FPu+ByLUFZ
+        PQ6edhS8nG/sHlc4AOpCXu9fVwJy000IVBgQmGJCUKoZHR+mMTfnwdueWZzM/Q7h7QmiSQjILsqjQcXn
+        9rCuHIUe+y7pEKAw4vAVC7SPxuF0emAcdiGiaAKRpT8gqrBDVDkFUbkdYjIqlV7+FRz5APZI+3FApsch
+        4hiSMYgX3T/BMIuo75rGGQJFVzsgrmcgfsAghkhRawEVk9qAI/I+7E0aQMBlA3El86qtOF80iqp2OxLK
+        bDhb60BsoxPxzfNIaHEj+eU8CprIzL7bDk39hP0k8kESOfiqBceyh1lnh8ONp93EqcGJxGduXGxfgrxz
+        BeltM1tPJcl6jBB5PwKTTQgmkY9fG0Fdp52NXfdmFueeuCBt80Dxeg2FH70obdVtwT5FqD4j6B/MJbCk
+        bByt7xnIHjpYOInAmnfryOliSPsufzs27wuJTZ6MwPyCMUSU2NiLkrbMQfXKDfXzMRb0iYV9y3b5+/tT
+        stI+ROcbEFVkheT+ENSNJvjq2/soiqL+AISyPHMly0kRAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="pnlToolSelect.GridSize" type="System.Drawing.Size, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>2, 2</value>
-  </metadata>
-  <metadata name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAAAAAAGAAAABgAAAAAAAAAAAA
